--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -247,10 +247,10 @@ This is particularly the case where there is little available additional
 information on metabolic processes, organic components of the shell
 matrix, intra-increment and intra-shell variability, and growth rates,
 which can independently and unpredictably affect Mg/Ca ratios and
-confound their interpretation as temperature proxy. Confoundingly,
+confound their interpretation as temperature proxy. Confusingly,
 multiple different temperature equations have been found for the same
-species (see {[}\citet{Freitas2012-tx}; @Vihtakari2017-wd{]} and
-references therein). Coeval specimens sharing one locality can also show
+species (see \citep{Freitas2012-tx, Vihtakari2017-wd} and references
+therein). Coeval specimens sharing one locality can also show
 differences in their relation to SST \citep{Hausmann2019-fi}. Where the
 use of Mg/Ca as a palaeotemperature proxy was successful, anomalous
 patterns in some specimens had still to be filtered out by hand,
@@ -260,9 +260,9 @@ studies \citep{Ferguson2011-zl}.
 While recent research particularly of \emph{Patella} sp. in the
 Mediterranean and Southwest Europe have provided promising results
 \citep{Hausmann2019-fi, Garcia-Escarzaga2015-jc, Garcia-Escarzaga2018-nf}.
-There remains unclarity for Atlantic limpet species, particularly since
-it was last shown here, that they are not reliable recorders of
-palaeotemperature \citep{Graniero2015-zv}.
+There remains a lack of clarity for Atlantic limpet species,
+particularly since it was last shown here, that they are not reliable
+recorders of palaeotemperature \citep{Graniero2015-zv}.
 
 In this study we will repeat and expand the analysis of Atlantic limpets
 to determine the reliability of Mg/Ca ratios as palaeotemperature
@@ -274,13 +274,14 @@ structure of the shell and better separate the external,
 temperature-related changes from the internal and less understood
 factors that influence the Mg/Ca ratio.
 
-Relying and adding onto published datasets, allowed us to simultaneously
-avoid costs for new high-resolution δ\textsuperscript{18}O-data, use
-real-world examples, and also provide pilot-data for areas of existing
-research interest. Generally establishing the usefulness and reliabilty
-of Mg/Ca as SST proxy in limpets should help to provide a platform for
-future research and an important stepping stone to better understand
-elemental ratios in other marine mollusc shells.
+By relying and adding onto published datasets, we were able to
+simultaneously avoid costs for new high-resolution
+δ\textsuperscript{18}O-data, to use real-world examples, and to also
+provide pilot-data for areas of existing research interest. Generally
+establishing the usefulness and reliability of Mg/Ca as SST proxy in
+limpets should help to provide a platform for future research and an
+important stepping stone to better understand elemental ratios in other
+marine mollusc shells.
 
 \section{Materials and Methods}\label{Methods}
 
@@ -400,40 +401,31 @@ sourced from \citet{Good2020-nl}}
 
 \subsubsection{Archaeological specimens}\label{archaeological-specimens}
 
-In total, we studied 16 archaeological specimens. Of those, seven come
-from Quoygrew on Westray dating to 900 -- 1200 CE. These shells have
-previously been studied to characterise seasonal temperature change
-during the Medieval Climate Anomaly and the Little Ice Age
-\citep{Surge2012-ba}. Together they show a range of lifespans, with some
-comparatively long for their size (QG1-7246-1, 12 years within 16 mm of
-growth) making them particularly susceptible to time-averaging. That
-said, the majority are under 5 years old. These shells are an ideal
+In total, we studied 16 archaeological specimens. Of those, seven
+\emph{P. vulgata} come from Quoygrew on Westray dating to 900 -- 1200
+CE. These shells have previously been studied to characterise seasonal
+temperature change during the Medieval Climate Anomaly and the Little
+Ice Age \citep{Surge2012-ba}. Together they show a range of lifespans,
+with some comparatively long for their size (QG1-7246-1, 12 years within
+16 mm of growth) making them particularly susceptible to time-averaging.
+That said, the majority are under 5 years old. These shells are an ideal
 comparative dataset from an archaeological assemblage to compare to the
 modern shell ORK\_LT5 \citep{Graniero2017-io}.
 
-Nine additional shells have been selected for LIBS analysis only, to
+Nine additional shells of \emph{N. magellanica} (n=6) and \emph{N}.
+\emph{deaureata} (n=3) have been selected for LIBS analysis only, to
 provide a comparative dataset to the modern \emph{Nacella} sp. shells.
 These have not been analysed for δ\textsuperscript{18}O-values, but
 rather as a test to see whether patterns visible in the modern Mg/Ca
 ratio distributions are also preserved and apparent in the
-archaeological shells.
+archaeological shells. They derive from the site of Heshkaia 35 situated
+within Moat Bay, around 30 km east of where the modern specimens in our
+study were collected \citep{Zangrando2014-qi, Zangrando2021-qg}. With
+radiocarbon dates putting the shells into the Late Holocene (1300 --
+1450 CE) they are of similar age --- if somewhat younger --- as the
+assemblage from Quoygrew.
 
 \subsection{Methods}\label{methods}
-
-\subsubsection{Oxygen isotopes}\label{oxygen-isotopes}
-
-High-quality oxygen isotope values (δ\textsuperscript{18}O) were
-acquired from previous publications on \emph{P. vulgata}
-\citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
-magellanica} \citep{Nicastro2020-ih}, where detailed descriptions of the
-stable isotope analysis methodology can be found. In short, all shells
-were sectioned along the main growth axis to expose the internal growth
-structure. From the exposed section carbonate powder samples were
-acquired using a micromilling approach with resolutions of 100--200 µm
-and targeting the calcitic M+2 layer of the shells. Analytical precision
-of the isotope values was consistently at 0.05--0.10‰ and values are
-reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee
-Belemnite) standard.
 
 \subsubsection{Mg/Ca ratios}\label{mgca-ratios}
 
@@ -441,60 +433,86 @@ Mg/Ca elemental imaging was carried out using Laser Induced Breakdown
 Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany)
 using previously published methods \citep{Hausmann2023-ih}. These
 involve the ablation of the shell section using an infrared (1064 nm)
-laser pulse (1--2 mJ, 100 Hz) onto a surface area of 20--30 µm to
-generate a plasma plume. This plume emits light, which is measured using
-a synchronised spectrometer. The resulting light spectrum quantifies the
-emission lines of magnesium () and calcium () to determine their
-intensity ratio. While these two peaks alone do not represent the molar
-concentrations of both elements (as opposed to calibration free LIBS;
-e.g. \citep{Martinez-Minchero2022-jz}), the intensity ratio is linearly
-correlated to the molar concentration \citep{Hausmann2017-oa}.
+laser (1--2 mJ, 100 Hz) onto a surface area of 20--30 µm to generate a
+plasma plume. This plume emits light, which is measured using a
+synchronised spectrometer. The resulting light spectrum quantifies the
+emission lines of magnesium (MgII; 279.553 nm) and calcium (CaII;
+315.887 nm) to determine their intensity ratio. While these two peaks
+alone do not represent the molar concentrations of both elements (as
+opposed to calibration free LIBS; e.g.
+\citep{Martinez-Minchero2022-jz}), the intensity ratio is linearly
+correlated to the molar concentration \citep{Hausmann2017-oa} and can be
+used as a reliable indicator of Mg/Ca changes within the shell
+carbonate.
+
+\subsubsection{Oxygen isotopes}\label{oxygen-isotopes}
+
+High-quality oxygen isotope values (δ\textsuperscript{18}O) were
+acquired from previous publications on \emph{P. vulgata}
+\citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
+magellanica} \citep{Nicastro2020-ih}, in which detailed descriptions of
+the stable isotope analysis methodology can be found. In short, all
+shells were sectioned along the main growth axis to expose the internal
+growth structure. From the exposed section carbonate powder samples were
+acquired using a micromill with resolutions of 100--200 µm and by
+targeting the calcitic M+2 layer of the shells. Analytical precision of
+the isotope values was consistently at 0.05--0.10‰ and values are
+reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee
+Belemnite) standard.
+
+Figure~\ref{fig-Nac_iso} and Figure~\ref{fig-Pat_iso} show the
+previously acquired sequential δ\textsuperscript{18}O-values of limpet
+shells by species. Due to the high sampling resolution, all shells show
+seasonally resolved and multi-year quasi-sinusoidal records of SST
+change , with \emph{Nacella} sp. shells living 2--3 years and
+\emph{Patella v}. regularly over 3 years. In those instances where
+longer lifetimes are encountered (i.e.~specimen QG1-7246-1,
+Figure~\ref{fig-Pat_iso} b). Interestingly, the ranges in
+δ\textsuperscript{18}O-values are not similar between the coeval
+\emph{Nacella} sp. specimens with δ\textsuperscript{18}O values for the
+previous summer temperatures ranging from 0.4‰ to above 1.0‰, and for
+winter values between 3.0‰ and 2.0‰. \emph{P. vulgata} has similarly
+variable δ\textsuperscript{18}O-values for summer and winter seasons,
+alas the lack of more that one modern specimens, means that we cannot
+quantify the variability of recorded annual ranges between specimens.
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.pdf}
+
+}
+
+\caption{\label{fig-Nac_iso}Isotope values of Nacella sp. limpet shells
+from Cambaceres Bay (\emph{a-f}).}
+
+\end{figure}%
+
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_iso-1.pdf}
+
+}
+
+\caption{\label{fig-Pat_iso}Isotope values of Patella vulagata limpet
+shells from Quoygrew (QG, \emph{a-g}) and Rack Wick Bay (ORK, \emph{h})
+on Westray, Orkney.}
+
+\end{figure}%
 
 \section{Results}\label{Results}
 
-\subsubsection{Modern Specimens}\label{modern-specimens-1}
+\subsection{\texorpdfstring{\emph{Patella
+vulgata}}{Patella vulgata}}\label{patella-vulgata}
 
-All modern shells show multi-year quasi-sinusoidal records of SST change
-(Figure~\ref{fig-Mod_iso}), with \emph{Nacella} sp. shells living 2--3
-years and \emph{Patella v}. over 5 years. The δ\textsuperscript{18}O
-values of the Orcadian shell have not been directly compared to the
-local SST, but accurately reflect the seasonal changes expected barring
-one extreme, anomalous value in the second summer of recorded growth.
+\subsection{\texorpdfstring{\emph{Nacella
+deaureata}}{Nacella deaureata}}\label{nacella-deaureata}
 
-\begin{figure}
-
-\centering{
-
-\includegraphics{Manuscript_files/figure-pdf/fig-Mod_iso-1.pdf}
-
-}
-
-\caption{\label{fig-Mod_iso}Isotope values of modern limpet shells from
-Cambaceres Bay (\emph{a-f}) and Westray (\emph{g}).}
-
-\end{figure}%
-
-\subsubsection{Archaeological
-Specimens}\label{archaeological-specimens-1}
-
-\begin{figure}
-
-\centering{
-
-\includegraphics{Manuscript_files/figure-pdf/fig-Arch_iso-1.pdf}
-
-}
-
-\caption{\label{fig-Arch_iso}Isotope values of Archaeological limpet
-shells from Quoygrew}
-
-\end{figure}%
-
-\subsection{Patella vulgata}\label{patella-vulgata}
-
-\subsection{Nacella deaureata}\label{nacella-deaureata}
-
-\subsection{Nacella magellanica}\label{nacella-magellanica}
+\subsection{\texorpdfstring{\emph{Nacella
+magellanica}}{Nacella magellanica}}\label{nacella-magellanica}
 
 \section{}\label{section}
 
@@ -604,6 +622,7 @@ Study
 \includegraphics{Manuscript_files/figure-pdf/subsample-1.pdf}
 
 
+\renewcommand\refname{References}
   \bibliography{bibliography.bib}
 
 
